Added latest version

--- a/index.html
+++ b/index.html
@@ -24,7 +24,6 @@
   <script src="https://code.angularjs.org/1.6.4/angular-messages.js"></script>
   <script src="https://ajax.googleapis.com/ajax/libs/angular_material/1.1.0/angular-material.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/1.0.3/angular-ui-router.js"></script>
-  <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.4/angular-mocks.js"></script>
 
   <!-- Translate -->
   <script src="https://cdn.rawgit.com/angular-translate/bower-angular-translate/2.15.2/angular-translate.js"></script>
@@ -34,10 +33,14 @@
   -->
   <script src="app.module.js"></script>
   <script src="app.config.js"></script>
+  <script src="i18n.config.js"></script>
   <script src="app.run.js"></script>
   <script src="customer/customer.module.js"></script>
   <script src="customer/customer.service.js"></script>
   <script src="customer/customer.controller.js"></script>
+  <script src="customer/vip.directive.js"></script>
+  <script src="customer/customer-table.directive.js"></script>
+  <script src="customer/customer-row.directive.js"></script>
   <script src="language/language.controller.js"></script>
   <script src="customer/details/details.controller.js"></script>
   <script src="dashboard/dashboard.module.js"></script>  
