--- a/customer/main/main.tmpl.html
+++ b/customer/main/main.tmpl.html
@@ -8,21 +8,5 @@
 <ng-include src="'customer/customer.tmpl.html'"></ng-include>
 <br>
 
-<table>
-  <thead>
-    <th ng-repeat="header in ::CustomerCtl.headerFields">
-      {{::header}}
-    </th>
-  </thead>
-  <tr ng-repeat="customer in CustomerCtl.customers | filter: CustomerCtl.search | orderBy: 'id' track by customer.id">
-    <td>{{::customer.id}} </td>
-    <td>{{::customer.first_name | uppercase}}</td>
-    <td>{{::customer.last_name | uppercase}} </td>
-    <td>{{::customer.birth_date | date:'dd/MM/yyyy'}} </td>
-    <td>{{::customer.iban}} </td>
-    <td>{{::customer.credit_card_no}} </td>
-    <td><a ui-sref="customer({customer: customer.first_name})">View {{::customer.first_name}} {{::customer.last_name}}</a></td>
-    <td><button ng-click="CustomerCtl.deleteCustomer(customer)">Delete</button></td>
-  </tr>
-</table>
+  <customer-table customers="CustomerCtl.customers" header-fields="CustomerCtl.headerFields" search="CustomerCtl.search" delete-customer="CustomerCtl.deleteCustomer(customer)"></customer-table>
 </md-content>
